<resources>
    <string name="app_name">CashMate App</string>
    <string name="view_name">View Expense</string>
    <string name="dashboard_name">Dashboard</string>
    <string name="edit_name">Edit Expense</string>
    <string name="add_name">Add New Expense</string>
    <string name="value_text">Value</string>
    <string name="delete_button">Delete</string>
    <string name="accept_button">Accept</string>
    <string name="description_text">Description</string>
    <string name="login">Login</string>
    <string name="id">ID</string>
    <string name="tag">Tag</string>
    <string name="description">Description</string>
    <string name="mouthofyear">Mouth Of Year</string>
    <string name="delete_expense_button">Delete Expense</string>
    <string name="accept_expense_button">Accept Expense</string>
    <string-array name="str2">
        <item>Data 1</item>
        <item>Data 2</item>
        <item>Data 3</item>
        <item>Data 4</item>
        <item>Data 5</item>
    </string-array>
</resources>