<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    tools:context=".activities.NewExpenseActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/editExpenseButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:text="@string/delete_expense_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Space"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/editExpenseTextValue"
        app:layout_constraintBottom_toTopOf="@+id/TableRow"
        android:layout_marginTop="10dp" />

    <Space
        android:id="@+id/Space"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/editExpenseButtonDelete"
        app:layout_constraintBottom_toTopOf="@+id/TableRow"
        app:layout_constraintEnd_toStartOf="@+id/editExpenseButtonAccept" />

    <Button
        android:id="@+id/editExpenseButtonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FF00"
        android:text="@string/accept_expense_button"
        app:layout_constraintStart_toEndOf="@+id/Space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/TableRow"
        app:layout_constraintTop_toBottomOf="@+id/editExpenseTextValue"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/EditExpenseTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/edit_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/editExpenseSpinnerMonth"
        android:layout_width="313dp"
        android:layout_height="51dp"
        app:layout_constraintTop_toBottomOf="@+id/editExpenseTextValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/editExpenseSpinnerTAG"
        android:layout_width="313dp"
        android:layout_height="51dp"
        app:layout_constraintTop_toBottomOf="@+id/editExpenseSpinnerMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editExpenseTextDescription"
        android:layout_width="313dp"
        android:layout_height="51dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/description_text"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        android:layout_marginTop="160dp" />

    <EditText
        android:id="@+id/editExpenseTextValue"
        android:layout_width="313dp"
        android:layout_height="51dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/value_text"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editExpenseTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="wrap"
        android:layout_marginTop="20dp" />

    <TableRow
        android:id="@+id/TableRow"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#CCCCCC"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="Button for Home"
            app:srcCompat="@drawable/baseline_home" />

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="Button for Add"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_add" />

        <ImageButton
            android:id="@+id/btn_view"
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="Button for View"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_view" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>
